# mod30-residue-lanes

./: CITATION.cff  LICENSE  Makefile  README.md  environment.yml  index.html  pyproject.toml  reports.md  requirements.txt
notebooks/: 00_mrl_foundations.ipynb  01_lane_residue_1.ipynb  07_lane_residue_7.ipynb  11_lane_residue_11.ipynb  13_lane_residue_13.ipynb  17_lane_residue_17.ipynb  19_lane_residue_19.ipynb  23_lane_residue_23.ipynb  29_lane_residue_29.ipynb
paper/: README.md  paper.md
reports/: 01_notebook_01.md  report_00_mrl_foundations.md  report_01_lane_residue_1.md  report_07_prime_filtered_lane_dynamics.md  report_11_window_drift.md  report_13_boundary_effects.md  report_17_reflected_manifold_decomposition.md  report_19_temporal_spectral_dynamics.md  report_23_graph_embeddings.md  report_29_sparse_feature_reset_boundary.md
results/: notebook00_admissible_residue_lanes.csv  notebook00_mod30_wheel_table.csv  notebook00_mrl_foundations.json  notebook01_lane01_similarity.csv  notebook01_lane01_spacing.csv  notebook01_lane_counts.csv  notebook01_lane_residue_1_summary.json  notebook01_window_lane_vectors.csv  notebook07_lane07_prime_similarity.csv  notebook07_lane07_prime_spacing.csv  notebook07_prime_filtered_lane_counts.csv  notebook07_prime_filtered_lane_dynamics_summary.json  notebook07_prime_window_lane_vectors.csv  notebook11_lane11_rolling_similarity.csv  notebook11_lane_leadership_summary.csv  notebook11_rolling_drift_metrics.csv  notebook11_rolling_prime_lane_vectors.csv  notebook11_window_drift_summary.json  notebook13_boundary_drift_metrics.csv  (+35 more)
(+13 files in other folders)
